# Projeto-Final-POO-II

./: .gitignore  cliente.py  docker-compose.yml  makefile  produto.py  readme.md  servidor.py  test.py  test_gerenciar_produto.py  test_servidor.py  teste_cliente.py  teste_produto.py
bib_email_functions/: README.md  pyproject.toml
bib_email_functions/src/email_functions/: email_def_body.py  email_sand.py
bib_email_functions/test/: test_email_def_body.py  test_email_sand.py
bib_funcao_postgree/: README.md  makefile  pyproject.toml
bib_funcao_postgree/src/funcao_postgree/: bd_postgree_base.py  bd_postgree_cliente.py  bd_postgree_funcionario.py  bd_postgree_pedido.py  bd_postgree_pedido_produto.py  bd_postgree_produto.py
bib_funcao_postgree/tests/: test_bd_postegree_funcionario.py  test_bd_postegree_pedido.py  test_bd_postegree_produto.py  test_bd_postgree_base.py  test_bd_postgree_pedido_produto.py
bib_postgre_func/: pyproject.toml
bib_postgre_func/src/postgre_func/: bd_postgree_base.py  bd_postgree_pedido.py  bd_postgree_produto.py
bib_produt_maneger/: pyproject.toml
bib_produt_maneger/src/produt_maneger/: gerenciar_produto.py  produto.py
bib_sincronizacao_servidor_cliente/: README.md  pyproject.toml
bib_sincronizacao_servidor_cliente/src/sincronizacao_servidor_cliente/: __init__.py  cliente_sincronizacao.py  servidor_sincronizacao.py
bib_sincronizacao_servidor_cliente/test/: test_cliente_sincronizacao.py  test_servidor_sincronizacao.py
cliente/: main.py
cliente/src/: cliente.py
cliente/src/func/: __init__.py  func_pedido.py  func_produtos.py  sincronizacao.py
cliente/src/screen/: home_ui.py
cliente_and_server/: _.env  main_cliente.py  main_server.py  requirements.txt
cliente_and_server/src/: _.env
cliente_and_server/src/func/: func_autenticacao.py  func_email.py  sincronizacao.py
cliente_and_server/src/screen/: adicionar_product_ui.py  autenticacao.py  dialogo_recuperacao_senha.py  home_cliente_ui.py  tela_principal_server_ui.py
cliente_and_server/test/: test_func_autenticacao.py  test_func_email.py
cliente_funcionario_server/: main_funcionario.py  main_server.py  requirements.txt
cliente_funcionario_server/src/func/: func_autenticacao.py  func_email.py  func_pedido.py  func_pedidos_desenvolvimento.py  func_produtos.py  func_relatorio.py  func_sincronizacao.py
cliente_funcionario_server/src/screen/: adicionar_product_ui.py  autenticacao.py  dialogo_efetivar_pedido.py  dialogo_exibir_pedido.py  dialogo_recuperacao_senha.py  (+4 more)
cliente_funcionario_server/test/: test_func_autenticacao.py  test_func_email.py  test_func_produtos.py  test_pedido.py  test_pedidos_desenvolvimento.py  test_sincronizacao.py
pack_work/: pyproject.toml
pack_work/src/libary/: bd_postgres.py  bd_redis.py  sincronizacao.py
script_redis/: Dockerfile  app.py  main.py
script_redis/src/: bd.py  dic_request.py  produto.py  produtos_mock.py  send_to_redis.py
script_redis/test/: test_bd.py
server/: dockerfile  main.py  requirements.txt
server/src/: servidor.py
service/: init_cliente.py  init_server.py
service/service_2/: main_func.py
service/src/: cliente.py  produto.py  servidor.py
service/test/: test_client.py  test_gerenciar_produto.py  test_produto.py  test_servidor.py
src/: cliente.py  produto.py  servidor.py
test/: test_client.py  test_produto.py  test_servidor.py
test2/: teste_servidor.py
testando_relatorio/: app.py  pedido.csv  pegar_dados_por_csv.py  produto.csv  produto_pedido.csv  relatorio_vendas.html
work/: requirements.txt  work.py
worker/: Dockerfile  main.py  main_func.py  menu.py  requirements.txt
worker/src/: bd_postgres.py  bd_redis.py  menu.py  produto.py
(+35 files in other folders)
