[tool.poetry]
name = "email-functions"
version = "0.1.0"
description = ""
authors = ["Kauã <Kaua.da@ufpi.edu.br>/ Clara <clara.satiro@ufpi.edu.br>/ Walison <weudesw0@gmail.com>/ Flavio <flaviolimamartins10@gmail.com>/ Jonas <jonasbo66@gmail.com>"]
readme = "README.md"
packages = [
    { include = "email_functions", from = "src" }
]


[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
