[tool.poetry]
name = "funcao_postgree"
version = "0.1.0"
description = ""
authors = ["Kauã <Kaua.da@ufpi.edu.br>/ Clara <clara.satiro@ufpi.edu.br>/ Walison <weudesw0@gmail.com>/ Flavio <flaviolimamartins10@gmail.com>/ Jonas <>"]
readme = "README.md"
packages = [
    { include = "funcao_postgree", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "2.9.10"
passlib = "1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
