[tool.poetry]
name = "sincronizacao_servidor_cliente"
version = "0.1.0"
description = ""
authors = ["Kauã <Kaua.da@ufpi.edu.br>/ Clara <clara.satiro@ufpi.edu.br>/ Walison <weudesw0@gmail.com>/ Flavio <flaviolimamartins10@gmail.com>/ Jonas <>"]
readme = "README.md"
packages = [
    { include = "sincronizacao_servidor_cliente", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
