[tool.poetry]
name = "pack-work"
version = "0.1.0"
description = ""
authors = ["KauaHenSilva <kaua.sbc@gmail.com>"]
readme = "README.md"
packages = [
    { include = "libary", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.25"
redis = "5.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
